--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 # action.yml
 name: 'Detects performance or front-end code quality issues'
 description: 'Analyzes a webpage and detects performance or front-end code quality issues'
+branding:
+  icon: 'check-circle'  
+  color: 'gray-dark'
 inputs:
   url:
     description: 'URL to analyse'
